--- a/_pages/knowledgeBase.html
+++ b/_pages/knowledgeBase.html
@@ -1,12 +1,12 @@
 ---
 layout: archive
-title: "Knowledge base"
+title: "Knowledge Base"
 permalink: /knowledgeBase/
 author_profile: true
 ---
 
 {% include base_path %}
 
-{% for post in site.knowledge-base reversed %}
+{% for post in site.knowledgeBase reversed %}
   {% include archive-single-talk.html %}
 {% endfor %}
